--- a/views/home.html
+++ b/views/home.html
@@ -1,1 +1,6 @@
-<h1>Home Page</h1>
+<div class="content">
+  <h1 style="text-align:center;">Home Page</h1>
+  <random-Ninja ninjas="ninjas" title="'Random Ninja'">
+    <p>check out more ninja</p>
+  </random-Ninja>
+</div>
