--- a/content/css/styles.css
+++ b/content/css/styles.css
@@ -51,16 +51,34 @@ main {
   border-radius: 10px;
 }
 
+main.ng-enter {
+  transition: 0.5s linear all;
+  opacity: 0;
+}
+
+main.ng-enter.ng-enter-active {
+  opacity: 1;
+}
+
 .content {
   padding: 20px;
 }
 
-.content input {
+.content input, .content textarea {
   width: 90%;
   padding: 10px 5%;
   border-radius: 10px;
   border: 2px solid #ddd;
   margin: 10px 0;
+}
+
+.content input.ng-invalid.ng-touched, .content textarea.ng-invalid.ng-touched {
+  border: 2px solid red;
+}
+
+.content input[disabled="disabled"] {
+  opacity: 0.4;
+  cursor: not-allowed !important;
 }
 
 .content input[type="submit"]:last-child {
@@ -116,4 +134,39 @@ main {
   color: crimson;
   cursor: pointer;
   margin-left: 10px;
+}
+
+#ninja-list li.ng-enter {
+  transition: 0.2s linear all;
+  opacity: 0;
+  -webkit-transform: translateY(30px);
+      -ms-transform: translateY(30px);
+          transform: translateY(30px);
+}
+
+#ninja-list li.ng-enter.ng-enter-active {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+          transform: translateY(0);
+}
+
+#ninja-list li.ng-leave {
+  transition: 0.2s linear all;
+  opacity: 1;
+  -webkit-transform: translateX(0);
+      -ms-transform: translateX(0);
+          transform: translateX(0);
+}
+
+#ninja-list li.ng-leave.ng-leave-active {
+  opacity: 0;
+  -webkit-transform: translateX(-100%);
+      -ms-transform: translateX(-100%);
+          transform: translateX(-100%);
+}
+
+#ninja-list li.ng-leave-stagger {
+  transition-delay: 0.2s;
+  transition-duration: 0;
 }
