--- a/views/directory.html
+++ b/views/directory.html
@@ -3,7 +3,7 @@
     <button ng-click="order='name'">Order by Name</button>
     <button ng-click="order='belt'">Order by Belt</button>
      <input type="text" placeholder="search" ng-model="search" />
-    <ul>
+    <ul id="ninja-list">
       <li ng-repeat="ninja in ninjas | orderBy: order | filter: search" ng-show="ninja.available">
          <img ng-src="{{ninja.thumb}}" style="float:left; margin: -12px 10px 0 0; width: 50px; height: 50px;" ng-show="ninja.thumb">
          <h3>{{ninja.name}} - {{ninja.rate | currency}}</h3>
@@ -18,7 +18,7 @@
       <input type="text" placeholder="rate" ng-model="newninja.rate">
       <input type="submit" value="Add new ninja">
     </form>
-
+    <a ng-click="removeAll()">Remove All Ninjas</a>
   </div>
 
 </div>
